--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             <header id="header">    <!--Cabecera, parte de arriba-->
                     <nav id="navBar">
                             <!--Imagenes en el NavBar editar con id par a poder encontrarlas en el CSS-->
-                        <img id="Logo_En_NavBar" src="./Icons/favicon.ico"><a href="./index.html"></a>
+                         <img id="Logo_En_NavBar"  href="./index.html" src="./Icons/favicon.ico">
                         <img id="Tablero_NavBar" src="./Images/Screenshot 2024-08-10 171439.png" alt="Logo de pagina">
 
                         <ul>    <!--listas de elementos-->
